[metadata]
name = rht-labs-hol003
description = Red Hat Training Labs for Course HOL003
url = https://github.com/RedHatTraining/HOL003/
long_description = file: README.md
long_description_content_type = text/markdown
author = Student User
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Students
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Training
    Topic :: Utilities
author-email = student@redhat.com
keywords = training, labs
maintainer = Student User
maintainer-email = student@redhat.com
project_urls =
    Source=https://github.com/RedHatTraining/HOL003
    Tracker=https://github.com/RedHatTraining/HOL003/issues

[options]
packages = find:
install_requires =
    rht-labs-core~=4.21.0
#   To include other modules, add more entries like
#   rht-labs-<module>~=<latest_version>
python_requires = >=3.6
package_dir =
    =src
zip_safe = True

[options.packages.find]
where = src

[sdist]
formats = gztar

[bdist_wheel]
universal = true

[flake8]
# Recommend matching the black line length (default 88),
# # rather than using the flake8 default of 79:
max-line-length = 88
